examples/test/testpolicy17862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17862
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key47: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value25
          key22: value11
      podSelector:
        matchLabels:
          key21: value39
          key0: value34
          key15: value48
